# nasdaqomx-itch

./: LICENSE  nasdaqomx-itch.cabal
NASDAQOMX/Nordic/: ITCH.hs
src/NASDAQOMX/Nordic/: ITCH.hs  OrderBook.hs
